<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CadastroUsuario"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="BEM-VINDO A TELA DE CADASTRO"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bro"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/txtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cadastro_nome_text"
                android:inputType="text"
                android:layout_marginTop="25dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"/>

            <EditText
                android:id="@+id/txtSobrenome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cadastro_sobremone_text"
                android:inputType="text"
                android:layout_marginTop="25dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"/>

            <EditText
                android:id="@+id/txtLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cadastro_login_text"
                android:inputType="text"
                android:layout_marginTop="25dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"/>

            <EditText
                android:id="@+id/txtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cadastro_senha_text"
                android:inputType="text"
                android:layout_marginTop="25dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"/>

            <Button
                android:id="@+id/btnCadastrarUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:text="@string/cadastrar_button_text"/>

            <TextView
                android:id="@+id/voltarLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Já tenho um login"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:cursorVisible="true"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>